<resources>
    <string name="app_name">PlayList Maker</string>
    <string name="Search">Поиск</string>
    <string name="Setting">Настройки</string>
    <string name="Library">Медиатека</string>
    <string name="Dark_theme">Темная тема</string>
    <string name="Share">Поделиться приложением</string>
    <string name="Support">Написать в поддержку</string>
    <string name="UserManual">Пользовательское соглашение</string>
    <string name="UrlAndroidDeveloper">https://practicum.yandex.ru/android-developer/</string>
    <string name="subjectEmail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="textSupportEmail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicumOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developerEmail">"thedrof3cool@mail.ru"</string>
    <string name="notFound">Ничего не нашлось</string>
    <string name="networkProblem">Проблемы со связью</string>
    <string name="networkError">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="youLookingTrack">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="trackTime">Длительность</string>
    <string name="mediaEmpty">Ваша медиатека пуста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="youNotCreateNewPlaylist">Вы не создали \nни одного плейлиста</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="myPlayList">Плейлисты</string>



</resources>

