<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_YP">
  <com.google.android.material.appbar.MaterialToolbar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:title="@string/app_name"
      app:titleTextColor="@color/white_YP"
      android:fontFamily="@font/ys_display_medium"
      />

  <Button
      android:id="@+id/search_button"
      style="@style/ButtonOnMainActivity"
      android:backgroundTint="@color/white"
      android:text="@string/Search"
      app:icon="@drawable/search"/>
  <Button
      android:id="@+id/library_button"
      style="@style/ButtonOnMainActivity"
      android:text="@string/Library"
      app:icon="@drawable/library"/>
  <Button
      android:id="@+id/setting_button"
      style="@style/ButtonOnMainActivity"
      android:text="@string/Setting"
      app:icon="@drawable/setting"/>

</LinearLayout>