<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:theme="@style/Theme.PlayListMakerTX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:theme="@style/Theme.PlayListMakerTX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:title="@string/Setting"
        app:titleTextColor="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_medium"
        />


    <Switch
        android:theme="@style/Theme.PlayListMakerTX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standart_padding"
        android:layout_gravity="end"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/Dark_theme"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="16sp"/>

    <FrameLayout
        android:theme="@style/Theme.PlayListMakerTX"
        style="@style/FrameLayoutOnSettingActivity"
        android:id="@+id/share_button">

        <TextView
            style="@style/TextViewOnSettingActivity"
            android:text="@string/Share" />
        <ImageButton
            style="@style/ImageButtonOnSettingActivity"
            android:src="@drawable/share"/>
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutOnSettingActivity"
        android:id="@+id/support_botton">
        <TextView
            style="@style/TextViewOnSettingActivity"
            android:text="@string/Support" />
        <ImageButton
            style="@style/ImageButtonOnSettingActivity"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutOnSettingActivity"
        android:id="@+id/user_agreement">

        <TextView
            style="@style/TextViewOnSettingActivity"
            android:text="@string/UserManual" />
        <ImageButton
            style="@style/ImageButtonOnSettingActivity"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

</LinearLayout>